Removed unwanted escape chars in reports' bundles

--- a/rpt/BillsReportMonthly_en.properties
+++ b/rpt/BillsReportMonthly_en.properties
@@ -12,10 +12,6 @@ Report.From = report from
 
 To = To
 
-Periodical.Incomes.Billed.And.Receivables.Report = Periodical \
-                                                    Incomes/Billed \
-                                                    and \
-                                                    Receivables \
-                                                    Report
+Periodical.Incomes.Billed.And.Receivables.Report = Periodical Incomes / Billed and Receivables Report
 
 Month.Summary = (month summary)
