--- a/rpt/BillsReportMonthly_es.properties
+++ b/rpt/BillsReportMonthly_es.properties
@@ -12,5 +12,6 @@ Report.From = Informe desde
 
 To = a
 
-Periodical.Incomes.Billed.And.Receivables.Report = Listado de ingresos poriodicos/Facturados y créditos
+Periodical.Incomes.Billed.And.Receivables.Report = Listado de Ingresos Periódicos / Facturados y créditos
+
 Month.Summary = (resumen mensual)
