--- a/rpt/BillsReportPending_it.properties
+++ b/rpt/BillsReportPending_it.properties
@@ -16,7 +16,8 @@ Paid = Pagato
 
 Patient = PAZIENTE
 
-Periodical.Incomes.Billed.And.Receivables.Report = Report periodico Incasso, Fatturato e Crediti
+Periodical.Incomes.Billed.And.Receivables.Report = Report periodico Incasso / Fatturato e Crediti
+
 With.Pending.Invoices = (con fatture aperte)
 
 Receivables = CREDITI
