--- a/rpt/BillsReport_fr.properties
+++ b/rpt/BillsReport_fr.properties
@@ -4,7 +4,7 @@ Accrued.In.Period = (augmenté dans la période)
 
 Amount = Montant
 
-Balance = Bilan
+Balance = Balance
 
 Bill.Id = ID Facture
 
@@ -17,6 +17,7 @@ Paid = Payé
 Patient = Patient
 
 Periodical.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées/Facturé et Recevables
+
 All.Invoices = (toutes les factures)
 
 Receivables = RECEVABLES
