--- a/rpt/WardPharmacyIncomes_en.properties
+++ b/rpt/WardPharmacyIncomes_en.properties
@@ -2,10 +2,11 @@
 
 Date = Date
 
-IncomingDrugs = \ - INCOMING DRUGS
+IncomingDrugs = - INCOMING DRUGS
 
-LotN = Lot N\u00B0
+LotN = Lot N°
 
 Medical = Medical
 
 Qty = Qty
+
