--- a/rpt/WardPharmacyIncomes_it.properties
+++ b/rpt/WardPharmacyIncomes_it.properties
@@ -2,9 +2,9 @@
 
 Date = Data
 
-IncomingDrugs =  - FARMACI IN ARRIVO
+IncomingDrugs = - FARMACI IN ARRIVO
 
-LotN = Lotto N\u00B0
+LotN = Lotto N°
 
 Medical = Farmaco
 
