--- a/rpt/BillsReportMonthly_it.properties
+++ b/rpt/BillsReportMonthly_it.properties
@@ -12,5 +12,6 @@ Report.From = Da
 
 To = a
 
-Periodical.Incomes.Billed.And.Receivables.Report = Report periodico Incasso, Fatturato e Crediti
+Periodical.Incomes.Billed.And.Receivables.Report = Report periodico Incasso / Fatturato e Crediti
+
 Month.Summary = (riassunto mensile)
