--- a/rpt/MOH705A_Under_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet_en.properties
+++ b/rpt/MOH705A_Under_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet_en.properties
@@ -12,8 +12,6 @@ RepublicOfKenyaMinistryOfHealth = REPUBLIC OF KENYA - MINISTRY OF HEALTH
 
 Totals = Totals
 
-Under5YearsDailyOutpatientMorbiditySummarySheet = UNDER 5 YEARS - DAILY \
-                                                  OUTPATIENT MORBIDITY SUMMARY \
-                                                  SHEET
+Under5YearsDailyOutpatientMorbiditySummarySheet = UNDER 5 YEARS - DAILY OUTPATIENT MORBIDITY SUMMARY SHEET
 
 Year = YEAR
