--- a/rpt/MOH705B_Over_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet_it.properties
+++ b/rpt/MOH705B_Over_5_Years_Daily_Outpatient_Morbidity_Summary_Sheet_it.properties
@@ -12,7 +12,7 @@ Month = MESE
 
 Over5YearsDailyOutpatientMorbiditySummarySheet = PIÙ DI 5 ANNI - SCHEDA RIEPILOGATIVA GIORNALIERA MORBIDITÀ AMBULATORI
 
-RepublicOfKenyaMinistryOfHealth = REPUBBLICA DEL KENY - MINISTERO DELLA SALUTE
+RepublicOfKenyaMinistryOfHealth = REPUBBLICA DEL KENYA - MINISTERO DELLA SALUTE
 
 Totals = Totali
 
