sync + little changes

--- a/rpt/BillsReportPending_fr.properties
+++ b/rpt/BillsReportPending_fr.properties
@@ -4,7 +4,7 @@ Accrued.In.Period = (augmenté dans la période)
 
 Amount = Montant
 
-Balance = balance
+Balance = Balance
 
 Bill.Id = ID Facture
 
@@ -16,15 +16,17 @@ Paid = Payé
 
 Patient = Patient
 
-Periodical.Incomes.Billed.And.Receivables.Report.With.Pending.Invoices = Rapport periodique Entrées/Facturé et Recevables (avec payements en cours)
+Periodical.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées / Facturé et Recevables
+
+With.Pending.Invoices = (avec payements en cours)
 
 Receivables = RECEVABLES
 
 Report.From = Rapport de
 
-Status = ÉTAT PATIENT
+Status = ETAT PATIENT
 
-To = À
+To = Á
 
 Total.Billed = TOTAL FACTURE
 Total.Income = TOTALE REVENUES
