--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -495,6 +495,7 @@ angal.examination.respiratoryrateabbr.col                                       
 angal.examination.respiratoryrateunit                                                                  = apm
 angal.examination.saturation                                                                           = Saturazione
 angal.examination.saturationabbr.col                                                                   = O2
+angal.examination.savethechanges.msg                                                                   = Salva modifiche?
 angal.examination.temperature                                                                          = Temperatura
 angal.examination.temperatureabbr.col                                                                  = T
 angal.examination.title                                                                                = Esame del Paziente
@@ -771,6 +772,7 @@ angal.medicalstockward.newlot.btn                                               
 angal.medicalstockward.newlot.btn.key                                                                  = N
 angal.medicalstockward.outcomes                                                                        = Uscite
 angal.medicalstockward.packets                                                                         = Pacchi
+angal.medicalstockward.packets.fmt                                                                     = {0} pacchi
 angal.medicalstockward.patient.date.col                                                                = Data
 angal.medicalstockward.patient.drug.col                                                                = Farmaco
 angal.medicalstockward.patient.quantity.col                                                            = Quantità
