Set default duration (30min) and date check on visits.
Also clean and improve code

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1510,6 +1510,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Prev.
 angal.visit.arrowprevious.btn.key                                                                      = P
+angal.visit.cannotsetadateinthepastfornextvisit.msg                                                    = You can not set a date in the past for next visit.
 angal.visit.changepatient                                                                              = Change Patient
 angal.visit.durationinminutes                                                                          = Duration (Min)
 angal.visit.findpatient.btn                                                                            = Find Patient
