--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1505,6 +1505,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Previo
 angal.visit.arrowprevious.btn.key                                                                      = V
+angal.visit.cannotsetadateinthepastfornextvisit.msg                                                    = No puede establecer una fecha en el pasado para la próxima visita.
 angal.visit.changepatient                                                                              = Cambiar Paciente
 angal.visit.durationinminutes                                                                          = Duración (minutos)
 angal.visit.findpatient.btn                                                                            = Asociar Paciente
