--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1505,6 +1505,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Préc.
 angal.visit.arrowprevious.btn.key                                                                      = P
+angal.visit.cannotsetadateinthepastfornextvisit.msg                                                    = Vous ne pouvez pas entrer une date du passé pour la prochaine visite.
 angal.visit.changepatient                                                                              = Changez de Patient
 angal.visit.durationinminutes                                                                          = Durée (Min)
 angal.visit.findpatient.btn                                                                            = Chercher Patient
