--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1507,6 +1507,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Prec.
 angal.visit.arrowprevious.btn.key                                                                      = P
+angal.visit.cannotsetadateinthepastfornextvisit.msg                                                    = Non è possibile impostare una data nel passato per la prossima visita.
 angal.visit.changepatient                                                                              = Cambia Paziente
 angal.visit.durationinminutes                                                                          = Durata (min)
 angal.visit.findpatient.btn                                                                            = Trova Paziente
