Add remove visit button in worksheet

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1527,6 +1527,8 @@ angal.visit.printthisdaysvisits1.btn                                            
 angal.visit.printthisdaysvisits1.btn.key                                                               = 1
 angal.visit.printthisdaysvisits2.btn                                                                   = Print this day's visits (2)
 angal.visit.printthisdaysvisits2.btn.key                                                               = 2
+angal.visit.removevisit.btn                                                                            = Remove Visit
+angal.visit.removevisit.msg                                                                            = Remove Visit?
 angal.visit.selectaward                                                                                = Select a Ward
 angal.visit.service                                                                                    = Service
 angal.visit.today.btn                                                                                  = Today
