--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1522,6 +1522,8 @@ angal.visit.printthisdaysvisits1.btn                                            
 angal.visit.printthisdaysvisits1.btn.key                                                               = 1
 angal.visit.printthisdaysvisits2.btn                                                                   = Imprimir las Visitas de este Día (2)
 angal.visit.printthisdaysvisits2.btn.key                                                               = 2
+angal.visit.removevisit.btn                                                                            = Remover Visita
+angal.visit.removevisit.msg                                                                            = Remover Visita?
 angal.visit.selectaward                                                                                = Seleccionar un reparto
 angal.visit.service                                                                                    = Servicio
 angal.visit.today.btn                                                                                  = Hoy
