Fixes by comments review

--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1523,7 +1523,7 @@ angal.visit.printthisdaysvisits1.btn.key                                        
 angal.visit.printthisdaysvisits2.btn                                                                   = Imprimir las Visitas de este Día (2)
 angal.visit.printthisdaysvisits2.btn.key                                                               = 2
 angal.visit.removevisit.btn                                                                            = Remover Visita
-angal.visit.removevisit.msg                                                                            = Remover Visita?
+angal.visit.removevisit.msg                                                                            = Eliminar la visita?
 angal.visit.selectaward                                                                                = Seleccionar un reparto
 angal.visit.service                                                                                    = Servicio
 angal.visit.today.btn                                                                                  = Hoy
