--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1528,7 +1528,7 @@ angal.visit.printthisdaysvisits1.btn.key                                        
 angal.visit.printthisdaysvisits2.btn                                                                   = Print this day's visits (2)
 angal.visit.printthisdaysvisits2.btn.key                                                               = 2
 angal.visit.removevisit.btn                                                                            = Remove Visit
-angal.visit.removevisit.msg                                                                            = Remove Visit?
+angal.visit.removevisit.msg                                                                            = Remove the visit?
 angal.visit.selectaward                                                                                = Select a Ward
 angal.visit.service                                                                                    = Service
 angal.visit.today.btn                                                                                  = Today
