--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1523,7 +1523,7 @@ angal.visit.printthisdaysvisits1.btn.key                                        
 angal.visit.printthisdaysvisits2.btn                                                                   = Imprimer les Consultations d'aujourd'hui (2)
 angal.visit.printthisdaysvisits2.btn.key                                                               = 2
 angal.visit.removevisit.btn                                                                            = Supprimez Visite
-angal.visit.removevisit.msg                                                                            = Supprimez Visite?
+angal.visit.removevisit.msg                                                                            = Supprimez la visite?
 angal.visit.selectaward                                                                                = Sélectionner un Département
 angal.visit.service                                                                                    = Service
 angal.visit.today.btn                                                                                  = Aujourd'hui
