--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1525,7 +1525,7 @@ angal.visit.printthisdaysvisits1.btn.key                                        
 angal.visit.printthisdaysvisits2.btn                                                                   = Stampa le Visite di Oggi (2)
 angal.visit.printthisdaysvisits2.btn.key                                                               = 2
 angal.visit.removevisit.btn                                                                            = Rimuovi Visita
-angal.visit.removevisit.msg                                                                            = Rimuovi Visita?
+angal.visit.removevisit.msg                                                                            = Rimuovere la visita?
 angal.visit.selectaward                                                                                = Selezionare un reparto
 angal.visit.service                                                                                    = Prestazione
 angal.visit.today.btn                                                                                  = Oggi
