Added Telemetry menu item in the Settings menu
+ managed the case when telemetry module is disabled from
settings.properties (could be used for other OH modules): we will not
show the menu item in the Settings menu

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -897,6 +897,7 @@ angal.menu.btn.printing                                                         
 angal.menu.btn.smsmanager                                                                              = SMS Manager
 angal.menu.btn.statistics                                                                              = Statistics
 angal.menu.btn.supplier                                                                                = Supplier
+angal.menu.btn.telemetry																			   = Telemetry
 angal.menu.btn.types                                                                                   = Types
 angal.menu.btn.users                                                                                   = Users & Groups
 angal.menu.btn.usersusers                                                                              = Users
@@ -949,6 +950,7 @@ angal.menu.printing                                                             
 angal.menu.smsmanager                                                                                  = SMS Manager
 angal.menu.statistics                                                                                  = Statistics
 angal.menu.supplier                                                                                    = Supplier
+angal.telemetry.title                                                                             	   = Telemetry
 angal.menu.types                                                                                       = Types
 angal.menu.users                                                                                       = Users
 angal.menu.usersusers                                                                                  = Users
