--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -895,6 +895,7 @@ angal.menu.btn.printing                                                         
 angal.menu.btn.smsmanager                                                                              = Gestionnaire de SMS
 angal.menu.btn.statistics                                                                              = Statistiques
 angal.menu.btn.supplier                                                                                = Fournisseur
+angal.menu.btn.telemetry																			   = Télémétrie
 angal.menu.btn.types                                                                                   = Typologies
 angal.menu.btn.users                                                                                   = Utilisateurs & Groupes
 angal.menu.btn.usersusers                                                                              = Usagers
@@ -947,6 +948,7 @@ angal.menu.printing                                                             
 angal.menu.smsmanager                                                                                  = Gestionnaire des SMS
 angal.menu.statistics                                                                                  = Statistiques
 angal.menu.supplier                                                                                    = Fournisseur
+angal.telemetry.title                                                                             	   = Télemetria
 angal.menu.types                                                                                       = Typologies
 angal.menu.users                                                                                       = Usagers
 angal.menu.usersusers                                                                                  = Usagers
