--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -899,6 +899,7 @@ angal.menu.btn.printing                                                         
 angal.menu.btn.smsmanager                                                                              = Gestore SMS
 angal.menu.btn.statistics                                                                              = Statistiche
 angal.menu.btn.supplier                                                                                = Fornitore
+angal.menu.btn.telemetry																			   = Télemetria
 angal.menu.btn.types                                                                                   = Tipologie
 angal.menu.btn.users                                                                                   = Utenti
 angal.menu.btn.usersusers                                                                              = Utenti
@@ -951,6 +952,7 @@ angal.menu.printing                                                             
 angal.menu.smsmanager                                                                                  = Gestore SMS
 angal.menu.statistics                                                                                  = Statistiche
 angal.menu.supplier                                                                                    = Fornitore
+angal.telemetry.title                                                                             	   = Télemetria
 angal.menu.types                                                                                       = Tipologie
 angal.menu.users                                                                                       = Utenti
 angal.menu.usersusers                                                                                  = Utenti
