--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -895,6 +895,7 @@ angal.menu.btn.printing                                                         
 angal.menu.btn.smsmanager                                                                              = Gestor SMS
 angal.menu.btn.statistics                                                                              = Estadísticas
 angal.menu.btn.supplier                                                                                = Proveedor
+angal.menu.btn.telemetry																			   = Telemetria
 angal.menu.btn.types                                                                                   = Tipologías
 angal.menu.btn.users                                                                                   = Usuarios
 angal.menu.btn.usersusers                                                                              = Usuarios
@@ -1444,6 +1445,7 @@ angal.therapy.settelephonenumber                                                
 angal.therapy.smsm                                                                                     = SMS
 angal.therapy.start                                                                                    = Inicio
 angal.therapy.startsdashend                                                                            = Inicio _ Fin
+angal.telemetry.title                                                                             	   = Telemetria
 angal.therapy.telephonenumberfor                                                                       = Número telefónico para
 angal.therapy.therapiesplancouldnotbesaved                                                             = El Plan de terapias no se ha guardado.
 angal.therapy.therapiesplansaved                                                                       = Plan de terapias guadado
