--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -316,6 +316,7 @@ angal.menu.btn.printing                                                     = Im
 angal.menu.btn.smsmanager                                                   = Gerente de SMS
 angal.menu.btn.statistics                                                   = Estatísticas
 angal.menu.btn.supplier                                                     = Fornecedor
+angal.menu.btn.telemetry													= Telemetria
 angal.menu.btn.types                                                        = Tipos de
 angal.menu.btn.users                                                        = Usuários
 angal.menu.btn.usersusers                                                   = Usuários
@@ -366,6 +367,7 @@ angal.menu.printing                                                         = Im
 angal.menu.smsmanager                                                       = Gerente de SMS
 angal.menu.statistics                                                       = Estatísticas
 angal.menu.supplier                                                         = Fornecedor
+angal.menu.telemetry														= Telemetria
 angal.menu.types                                                            = Tipos de
 angal.menu.users                                                            = Usuários
 angal.menu.usersusers                                                       = Usuários
