--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -272,6 +272,7 @@ angal.menu.btn.printing                                                     = Uc
 angal.menu.btn.smsmanager                                                   = Ujumbe wa Msimamizi
 angal.menu.btn.statistics                                                   = Takwimu
 angal.menu.btn.supplier                                                     = Muuzaji
+angal.menu.btn.telemetry													= Telemetry
 angal.menu.btn.types                                                        = Aina
 angal.menu.btn.users                                                        = Watumiaji
 angal.menu.btn.usersusers                                                   = Watumiaji
@@ -319,6 +320,7 @@ angal.menu.printing                                                         = Uc
 angal.menu.smsmanager                                                       = Ujumbe wa Msimamizi
 angal.menu.statistics                                                       = Takwimu
 angal.menu.supplier                                                         = Muuzaji
+angal.menu.telemetry														= Telemetry
 angal.menu.types                                                            = Aina
 angal.menu.users                                                            = Watumiaji
 angal.menu.usersusers                                                       = Watumiaji
