--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1042,7 +1042,7 @@ angal.newbill.youcannotdeletepastpayments.msg                                   
 angal.opd.agefrommustbelowerthanageto.msg                                                              = 'Age from' must be lower than 'Age to'.
 angal.opd.alldiseases.txt                                                                              = All Diseases
 angal.opd.attendancedate.txt                                                                           = Admittance Date
-angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = You can not set a date in the past for next visit.
+angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = You can not set a date in the past for the next visit.
 angal.opd.datefrommustbebefordateto.msg                                                                = 'Date from' must be earlier than 'Date to'.
 angal.opd.deletefollowingopd.fmt.msg                                                                   = Delete the following opd?\n\nRegistration Date={0}\nDisease={1}\nAge={2}, Sex={3}\nVisit Date={4}
 angal.opd.diagnosis.txt                                                                                = Diagnosis
@@ -1510,7 +1510,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Prev.
 angal.visit.arrowprevious.btn.key                                                                      = P
-angal.visit.cannotsetadateinthepastfornextvisit.msg                                                    = You can not set a date in the past for next visit.
+angal.visit.cannotsetadateinthepastfornextvisit.msg                                                    = You can not set a date in the past for the next visit.
 angal.visit.changepatient                                                                              = Change Patient
 angal.visit.durationinminutes                                                                          = Duration (Min)
 angal.visit.findpatient.btn                                                                            = Find Patient
