Avoid Worksheet operativity when there are visit changes pending

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1442,6 +1442,7 @@ angal.therapy.patientvisitssaved                                                
 angal.therapy.period                                                                                   = Period
 angal.therapy.pharmaceutical                                                                           = Pharmaceutical
 angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Please insert a quantity greater than 0
+angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Please save the visits plan first
 angal.therapy.removetherapy.btn                                                                        = Remove Therapy
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Remove Visit
