--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1437,6 +1437,7 @@ angal.therapy.patientvisitssaved                                                
 angal.therapy.period                                                                                   = Período
 angal.therapy.pharmaceutical                                                                           = Producto
 angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Digitar una cantidad mayor a cero
+angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Guarde primero el plan de visitas
 angal.therapy.removetherapy.btn                                                                        = Remover Terapia
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Remover Visita
