--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1437,6 +1437,7 @@ angal.therapy.patientvisitssaved                                                
 angal.therapy.period                                                                                   = Période
 angal.therapy.pharmaceutical                                                                           = Pharmaceutique
 angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Veuillez insérer une quantité supérieure à 0
+angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Veuillez d'abord enregistrer le plan de visites
 angal.therapy.removetherapy.btn                                                                        = Supprimez Thérapie
 angal.therapy.removetherapy.btn.key                                                                    = S
 angal.therapy.removevisit.btn                                                                          = Supprimez Visite
