--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1439,6 +1439,7 @@ angal.therapy.patientvisitssaved                                                
 angal.therapy.period                                                                                   = Periodo
 angal.therapy.pharmaceutical                                                                           = Prodotto
 angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Inserire una quantità maggiore di 0
+angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Si prega di salvare prima il piano delle visite
 angal.therapy.removetherapy.btn                                                                        = Rimuovi Terapia
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Rimuovi Visita
